Comment out openejb, because it cannot be maven-released due to SNAPSHOT dependencies